<resources>
    <string name="app_name">TheMovieBooking</string>
    <string name="lbl_welcome">Welcome!</string>
    <string name="lbl_hello_welcome_to_galaxy_app">Hello! Welcome to Galaxy App.</string>
    <string name="lbl_get_started">Get Started</string>
    <string name="lbl_welcome_back_login_to_continue">Welcome back, login to continue</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_forgot_password">Forgot Password?</string>
    <string name="lbl_sign_in_with_facebook">Sign in with facebook</string>
    <string name="lbl_sign_in_with_google">Sign in with Google</string>
    <string name="lbl_confirm">Confirm</string>
    <string name="lbl_search">Search</string>
    <string name="lbl_now_showing">Now Showing</string>
    <string name="lbl_coming_soon">Coming Soon</string>
    <string name="lbl_plot_summary">Plot Summary</string>
    <string name="lbl_cast">Cast</string>
    <string name="lbl_get_your_ticket">Get your ticket</string>
    <string name="lbl_we">We</string>
    <string name="lbl_th">Th</string>
    <string name="lbl_fr">Fr</string>
    <string name="lbl_sa">Sa</string>
    <string name="lbl_su">Su</string>
    <string name="lbl_mo">Mo</string>
    <string name="lbl_Tu">Tu</string>
    <string name="lbl_available_in">Available In</string>
    <string name="lbl_2d">2D</string>
    <string name="lbl_3d">3D</string>
    <string name="lbl_imax">IMAX</string>
    <string name="lbl_golden_city">GC : Golden City</string>
    <string name="lbl_9_30_am">9:30 AM</string>
    <string name="lbl_11_45_am">11:45 AM</string>
    <string name="lbl_3_30_pm">3:30 PM</string>
    <string name="lbl_5_00_pm">5:00 PM</string>
    <string name="lbl_7_00_pm">7:00 PM</string>
    <string name="lbl_west_point">GC : West Point</string>
    <string name="lbl_next">Next</string>
    <string name="lbl_available">Available</string>
    <string name="lbl_reserved">Reserved</string>
    <string name="lbl_seat_a">A</string>
    <string name="lbl_seat_b">B</string>
    <string name="lbl_seat_c">C</string>
    <string name="lbl_seat_d">D</string>
    <string name="lbl_seat_e">E</string>
    <string name="lbl_seat_f">F</string>
    <string name="lbl_seat_g">G</string>
    <string name="lbl_your_selection">Your Selection</string>
    <string name="lbl_tickets">Tickets</string>
    <string name="lbl_payment_method">Payment method</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_ph_no">Phone Number</string>
    <string name="edit">Edit</string>
    <string name="promotion_code">Promotion Code</string>
    <string name="select_a_language">Select a Language</string>
    <string name="terms_of_services">Terms of Services</string>
    <string name="help">Help</string>
    <string name="rate_us">Rate Us</string>
    <string name="log_out">Log Out</string>
    <string name="Seats">lbl_seats</string>
    <string name="lbl_payment_amount">Payment Amount</string>
    <string name="lbl_add_new_card">Add new card</string>
    <string name="lbl_card_holder">Card Holder</string>
    <string name="lbl_expire">Expire</string>
    <string name="lbl_card_number">Card Number</string>
    <string name="lbl_expire_date">Expiration Date</string>
    <string name="lbl_cvc">CVC</string>
    <string name="lbl_awesome">Awesome!</string>
    <string name="lbl_this_is_your_ticket">This is your ticket.</string>
    <string name="lbl_booking_no">Booking no</string>
    <string name="lbl_show_time_date">Show time - Date</string>
    <string name="lbl_theater">Theater</string>
    <string name="lbl_screen">Screen</string>
    <string name="lbl_row">Row</string>
    <string name="lbl_seats">Seats</string>
    <string name="lbl_price">Price</string>
</resources>