<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/margin_medium_2"
    android:layout_marginEnd="@dimen/margin_medium_2"
    tools:context=".fragments.LoginFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_email"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:textColor="@color/color_gray" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvEmail"
        android:inputType="textEmailAddress" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtEmail"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:text="@string/lbl_password"
        android:textColor="@color/color_gray" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvPassword"
        android:inputType="textPassword" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtPassword"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:text="@string/lbl_forgot_password"
        android:textColor="@color/color_gray" />

    <include
        android:id="@+id/vpLogInButton"
        layout="@layout/view_pod_login_method"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tvForgotPassword"
        android:layout_marginTop="@dimen/margin_xlarge" />

</RelativeLayout>