<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddNewVisaCardActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivBackBtn"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_baseline_chevron_left_black_24dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCardNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivBackBtn"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:textSize="@dimen/text_regular_2x"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/lbl_card_number"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtCardNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:layout_marginEnd="@dimen/margin_medium_2"
        android:layout_below="@id/tvCardNumber"
        android:hint="1234.5678.9012.3456"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCardHolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtCardNumber"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:textSize="@dimen/text_regular_2x"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/lbl_card_holder"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtCardHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:layout_marginEnd="@dimen/margin_medium_2"
        android:layout_below="@id/tvCardHolder"
        android:hint="Lily"
        />

    <LinearLayout
        android:layout_marginTop="@dimen/margin_medium_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:layout_marginEnd="@dimen/margin_medium_2"
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_below="@id/edtCardHolder">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvExpiration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_regular_2x"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/lbl_expire_date"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtExpirationDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvExpiration"
                android:hint="08/22"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvCVC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_regular_2x"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/lbl_cvc"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtCVC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvCVC"
                android:hint="150"
                />
        </RelativeLayout>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnConfirm"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:layout_marginEnd="@dimen/margin_medium_2"
        android:layout_marginBottom="@dimen/margin_medium_2"
        android:background="@drawable/background_button"
        android:text="@string/lbl_confirm"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_regular_2x" />

</RelativeLayout>