<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/margin_medium_2"
    android:background="@color/colorPrimary">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivDrawerProfile"
            android:layout_width="@dimen/margin_xXlarge"
            android:layout_height="@dimen/margin_xXlarge"
            android:layout_marginTop="@dimen/dimen_64"
            android:src="@drawable/mr_bean"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/ivDrawerProfile"
            android:layout_marginStart="@dimen/margin_medium_2"
            android:layout_toEndOf="@id/ivDrawerProfile"
            android:text="Mr Bean"
            android:textColor="@color/white"
            android:textSize="@dimen/text_regular_2x"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvName"
            android:layout_alignStart="@id/tvName"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_toEndOf="@id/ivDrawerProfile"
            android:text="mrbean@gmail.com"
            android:textColor="@color/white" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvName"
        android:layout_marginEnd="16dp"
        android:layout_alignParentEnd="true"
        android:text="@string/edit"
        android:textColor="@color/white" />

        <LinearLayout
            android:id="@+id/llPromotionCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvEmail"
            android:layout_marginTop="@dimen/margin_xXlarge"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="@dimen/dimen_2"
                android:src="@drawable/ic_baseline_local_offer_24dp_white" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium_2"

                android:text="@string/promotion_code"
                android:textColor="@color/white"
                android:textSize="@dimen/text_regular_3x"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llLanguage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/llPromotionCode"
            android:layout_marginTop="@dimen/margin_xlarge"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="@dimen/dimen_2"
                android:src="@drawable/ic_baseline_g_translate_24dp_white" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium_2"
                android:text="@string/select_a_language"
                android:textColor="@color/white"
                android:textSize="@dimen/text_regular_3x"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llTerms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/llLanguage"
            android:layout_marginTop="@dimen/margin_xlarge"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="@dimen/dimen_2"
                android:src="@drawable/ic_baseline_assignment_24dp_white" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium_2"
                android:text="@string/terms_of_services"
                android:textColor="@color/white"
                android:textSize="@dimen/text_regular_3x"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llHelp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/llTerms"
            android:layout_marginTop="@dimen/margin_xlarge"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="@dimen/dimen_2"
                android:src="@drawable/ic_baseline_help_24dp_white" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium_2"
                android:text="@string/help"
                android:textColor="@color/white"
                android:textSize="@dimen/text_regular_3x"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llRate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/llHelp"
            android:layout_marginTop="@dimen/margin_xlarge"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="@dimen/dimen_2"
                android:src="@drawable/ic_baseline_stars_24dp_white" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium_2"
                android:text="@string/rate_us"
                android:textColor="@color/white"
                android:textSize="@dimen/text_regular_3x"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llLogOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="@dimen/margin_xlarge"
            android:layout_marginBottom="@dimen/margin_xXlarge"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="@dimen/dimen_2"
                android:src="@drawable/ic_baseline_logout_24dp_white" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium_2"
                android:text="@string/log_out"
                android:textColor="@color/white"
                android:textSize="@dimen/text_regular_3x"
                android:textStyle="bold" />
        </LinearLayout>

    </RelativeLayout>

