<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SelectSeatsActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivBackBtn"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_baseline_chevron_left_black_24dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvMovieName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivBackBtn"
        android:layout_centerHorizontal="true"
        android:text="Detective Pikachu"
        android:textColor="@color/black"
        android:textSize="@dimen/text_regular_3x"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvGalaxyCinema"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvMovieName"
        android:layout_centerHorizontal="true"
        android:text="Galaxy Cinema - Golden City"
        android:textColor="@color/color_gray"
        android:textSize="@dimen/text_regular" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvMovieDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvGalaxyCinema"
        android:layout_centerHorizontal="true"
        android:text="Wednesday, 10 May, 07:00 PM"
        android:textColor="@color/color_dark_gray"
        android:textSize="@dimen/text_regular_2x" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvShowSeats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvMovieDate"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:layout_marginEnd="@dimen/margin_medium_2"
        android:layout_marginBottom="@dimen/margin_medium_2" />

    <LinearLayout
        android:id="@+id/llColorDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rvShowSeats"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:layout_marginEnd="@dimen/margin_medium_2"
        android:orientation="horizontal"
        android:weightSum="3">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivAvailableCircle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_circle_gray_24dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_toEndOf="@id/ivAvailableCircle"
                android:text="@string/lbl_available"
                android:textColor="@color/color_gray" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivReservedCircle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_circle_dark_gray_24dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_toEndOf="@id/ivReservedCircle"
                android:text="@string/lbl_reserved"
                android:textColor="@color/color_gray" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivYourSelectionCircle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_circle_purple_24dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_toEndOf="@id/ivYourSelectionCircle"
                android:text="@string/lbl_your_selection"
                android:textColor="@color/color_gray" />
        </RelativeLayout>


    </LinearLayout>

    <View
        android:id="@+id/vDottedLine"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_2"
        android:layout_below="@id/llColorDescription"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:layout_marginEnd="@dimen/margin_medium_2"
        android:background="@drawable/background_dotted_line" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTicketTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/vDottedLine"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:text="@string/lbl_tickets"
        android:textColor="@color/color_gray" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTicket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/vDottedLine"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:layout_marginEnd="@dimen/margin_medium_2"
        android:text="2" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSeatsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTicketTitle"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:text="@string/Seats"
        android:textColor="@color/color_gray" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSeats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTicketTitle"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:layout_marginEnd="@dimen/margin_medium_2"
        android:text="D Row/5, 6" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnBuyTicket"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:layout_marginEnd="@dimen/margin_medium_2"
        android:layout_marginBottom="@dimen/margin_medium_2"
        android:background="@drawable/background_button"
        android:text="Buy Ticket for $20.00"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_regular_2x" />


</RelativeLayout>